Spacing Issues

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -7701,9 +7701,8 @@ header,
 body,
 html,
 main {
-  max-width: 100vw;
   overflow-x: hidden !important;
-  width: 100vw;
+  width: 100%;
   background: #fcf8e8;
   position: relative; }
 
@@ -7857,6 +7856,7 @@ main {
     padding-bottom: 0; } }
 
 .multi-class {
+  margin: 50px auto;
   padding: 20px;
   background: #fcf8e8;
   position: relative; }
@@ -7887,7 +7887,8 @@ main {
     margin: auto; } }
 
 .what-do-i-do {
-  background: #fcf8e8; }
+  background: #fcf8e8;
+  margin: 50px auto; }
   .what-do-i-do .main-image {
     width: 900%;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
