--- a/styles/sass/pages/_index.scss
+++ b/styles/sass/pages/_index.scss
@@ -10,9 +10,8 @@ body,
 html,
 main
 {
-  max-width: 100vw;
   overflow-x: hidden !important;
-  width: 100vw;
+  width: 100%;
   background: $pale-yellow;
   position:relative;
 }
@@ -218,6 +217,7 @@ background: radial-gradient(circle, $primary-dark 0%, $primary-dark 50%, $primar
 
 // Below Paralax
 .multi-class {
+    margin: 50px auto;
     padding: 20px;
   background: $pale-yellow;
 
@@ -268,6 +268,7 @@ background: radial-gradient(circle, $primary-dark 0%, $primary-dark 50%, $primar
 
  .what-do-i-do {
      background: $pale-yellow;
+     margin: 50px auto;
 
     .main-image {
         width: 900%;
